--- a/style.css
+++ b/style.css
@@ -56,32 +56,22 @@ a {
     color: #555555;
 }
 
-aside {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 h1 {
     font-size: 50px;
     color: #555555;
 }
 
+aside {
+    text-align: center;
+}
+
 .titulos {
-    margin: 20px;
     font-weight: 400;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-p {
-    margin-bottom: 10px;
-    text-align: justify;
-}
 
-section {
-    margin: 20px;
-    width: 400px;
-}
 
 body{
     background-color: #EDEDE9;
@@ -141,9 +131,13 @@ input[type="submit"] {
     border-radius: 10px;
     background-color: #D5BDAF;
     border-color: white;
-    margin-top: 10px;
     border: none;
 }
+
+input[type="submit"]:hover {
+    background-color: white;
+}
+
 
 .content-box {
     display: flex;
@@ -165,6 +159,7 @@ input[type="submit"] {
     font-weight: 300;
 
 }
+
 
 /* Visualizacion para pantallas tamaño mobile*/
 @media (max-width: 768px){
@@ -194,11 +189,6 @@ input[type="submit"] {
 
     }
     
-    .information-container {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-    }
 
     form {
         display: flex;
